src/common/components/ArticleDetails.scss
%ellipsis {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}
%hideable-container {
	flex: 0 0 auto;
	overflow: hidden;
	transition: width 500ms, margin 500ms;
}
%hideable-container-hidden {
	width: 0;
}
%hideable-content {
	transition: opacity 250ms;
}
%hideable-content-hidden {
	opacity: 0;
}

.article-details {
	display: flex;
	border: 1px solid gray;
	border-radius: 5px;
	overflow: hidden;
}
.article-details > .content {
	flex: 1 1 auto;
	padding: 5px 7px;
	overflow: hidden;
}
.article-details > .content > .tags {
	display: flex;
	margin-top: 3px;
	display: none;
}
.article-details > .content > .tags > .tag {
	padding: 0 1px;
	border: 1px dotted lightgray;
	border-radius: 3px;
	color: lightgray;
	white-space: nowrap;
	margin-right: 2px;
}
.article-details > .content > .tags > .tag:last-child {
	margin-right: none;
}
.article-details > .content > .columns {
	display: flex;
	margin-top: 5px;
	border-top: 1px solid silver;
	padding-top: 5px;
}
.article-details > .content > .columns > .left {
	flex: 0 0 auto;
	width: 38px;
	margin-right: 7px;
	border-right: 1px solid silver;
	padding-right: 7px;
	display: flex;
	flex-flow: column;
	justify-content: center;
	align-items: center;
}
.article-details > .content > .columns > .left > .length {
	color: darkgray;
	font-size: 11px;
	margin-bottom: 2px;
}
.article-details > .content > .columns > .left > .speech-bubble-container {
	display: flex;
	align-items: center;
	position: relative;
	width: 36px;
}
.article-details > .content > .columns > .left > .speech-bubble-container > .speech-bubble {
	width: 36px;
}
.article-details > .content > .columns > .left > .speech-bubble-container > .speech-bubble > .double-r-path-group {
	fill: darkgray;
}
.article-details > .content > .columns > .left > .speech-bubble-container > .percent-complete-label {
	color: gray;
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%,-75%);
	font-size: 12px;
}
.article-details > .content > .columns > .middle {
	flex: 1 1 auto;
	overflow: hidden;
}
.article-details > .content > .columns > .middle > .title {
	display: none;
}
.article-details > .content > .columns > .middle > .description {
	@extend %ellipsis;
	font-size: 11px;
	color: lightslategray;
}
.article-details > .content > .columns > .middle > .s-r-c {
	display: flex;
	flex-wrap: wrap;
}
.article-details > .content > .columns > .middle > .s-r-c > .source {
	@extend %ellipsis;
	width: 100%;
	margin: 2px 0 3px 0;
	color: mediumorchid;
}
.article-details > .content > .columns > .middle > .s-r-c > .reads {
	color: teal;
	white-space: nowrap;
	margin-right: 6px;
}
.article-details > .content > .columns > .middle > .s-r-c > .reads > .icon {
	margin-right: 3px;
}
.article-details > .content > .columns > .middle > .s-r-c > .aotd {
	margin-left: 6px;
	color: darkturquoise;
}
.article-details > .content > .columns > .right {
	flex: 0 0 auto;
	border-left: 1px solid silver;
	display: flex;
	flex-flow: column;
	justify-content: center;
	align-items: center;
	margin-left: 3px;
	padding-left: 7px;
}
.article-details > .content > .columns > .right > .icon {
	width: 22px;
	height: 22px;
	color: lightgray;
}
.article-details > .content > .columns > .right > .icon.enabled {
	color: dimgray;
	cursor: pointer;
	fill: url('#shimmer');
}
.article-details > .controls {
	@extend %hideable-container;
	display: flex;
	justify-content: center;
	align-items: center;
	width: 28px;
	border-left-width: 1px;
	border-style: solid;
	border-color: gray;
}
.article-details > .controls.hidden {
	@extend %hideable-container-hidden;
	margin-right: -1px;
}
.article-details > .controls > .delete-control {
	@extend %hideable-content;
	cursor: pointer;
}
.article-details > .controls.hidden > .delete-control {
	@extend %hideable-content-hidden;
}

@media (min-width: 500px) {
	.article-details > .content > .title {
		display: none;
	}
	.article-details > .content > .columns {
		margin-top: 0;
		border-top: none;
		padding-top: 0;
	}
	.article-details > .content > .columns > .middle > .title {
		display: flex;
		margin-bottom: 3px;
	}
	.article-details > .content > .columns > .middle > .s-r-c {
		flex-wrap: nowrap;
		margin-top: 2px;
	}
	.article-details > .content > .columns > .middle > .s-r-c > .source {
		width: auto;
		margin: 0 12px 0 0;
	}
	.article-details > .content > .columns > .middle > .s-r-c > .reads {
		margin-right: 12px;
	}
	.article-details > .content > .columns > .middle > .s-r-c > .aotd {
		margin-left: 12px;
	}
}

